examples/clog/tests/snapshots/g1_agency__g1_b_delivery.snap
---
source: examples/clog/tests/g1_agency.rs
expression: "c.situation(Some(\"delivery-health\"), None).unwrap().text"
---
# situation · scope: delivery-health · rev 3 · 2024-10-10T00:00:00Z

## urgent
1. (1.7) Invoice 1042 is 30 days overdue [B/2] (halcyon:inv-1042:v1)
2. (1.6) Invoice 1042 still overdue per bookkeeper [C/3] (halcyon:inv-1042:v2)
3. (1.4) Halcyon deliverable is slipping by a week [B/3] (halcyon:deliverable:slip)
4. (1.0) Payment received for invoice 1042 [A/1] (halcyon:inv-1042:paid)
5. (0.8) Did Meridian sign the SOW? [B/2] (meridian:question:sow)
6. (0.5) Inbound lead from Vega Labs [B/2] (vega:lead:inbound)
7. (0.4) Meridian kickoff moved to Thursday [B/2] (meridian:kickoff:moved)
8. (0.4) Sam is on PTO next week [C/2] (meridian:pto:sam)
… (1 more)

## open loops
- RISK Halcyon deliverable is slipping by a week (halcyon:deliverable:slip)
- RISK Invoice 1042 is 30 days overdue (halcyon:inv-1042:v1)
- RISK Invoice 1042 still overdue per bookkeeper (halcyon:inv-1042:v2)
- QUESTION Did Meridian sign the SOW? (meridian:question:sow)

## entities
Samuel: Sam is on PTO next week
Halcyon: Invoice 1042 still overdue per bookkeeper; Halcyon deliverable is slipping by a week

## changes since last brief
+ Payment received for invoice 1042
